@@ -41,7 +41,7 @@ server {
         expires 30d;
     }
 
-    location ~ ^/(ftp|pma|webmail) {
+    location ~ ^/(ftp|pma) {
         root {WEB_DIR}/public/tools;
 
         location ~ \.php$ {
